--- a/RecurrentDescentParser/RecurrentDescentParser.vcxproj.filters
+++ b/RecurrentDescentParser/RecurrentDescentParser.vcxproj.filters
@@ -21,9 +21,18 @@
     <ClCompile Include="RDParser.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Scanner.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="RDParser.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Scanner.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="ScannerBase.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
