--- a/RecurrentDescentParser/RecurrentDescentParser.vcxproj.filters
+++ b/RecurrentDescentParser/RecurrentDescentParser.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Scanner">
+      <UniqueIdentifier>{621775d4-23fd-46aa-afb1-a9ceb97cf9b7}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -22,18 +25,18 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Scanner.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>Scanner</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="RDParser.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Scanner.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="ScannerBase.h">
       <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Scanner.h">
+      <Filter>Scanner</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
