--- a/RecurrentDescentParser/RecurrentDescentParser.vcxproj.filters
+++ b/RecurrentDescentParser/RecurrentDescentParser.vcxproj.filters
@@ -50,5 +50,13 @@
     <ClInclude Include="scanner\FuncScanner.h">
       <Filter>Scanner</Filter>
     </ClInclude>
+    <ClInclude Include="default.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ScannerImplMacro.inc">
+      <Filter>소스 파일</Filter>
+    </None>
   </ItemGroup>
 </Project>
