--- a/RecurrentDescentParser/RecurrentDescentParser.vcxproj.filters
+++ b/RecurrentDescentParser/RecurrentDescentParser.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="parser\ParserBase.cpp">
       <Filter>Parser</Filter>
     </ClCompile>
+    <ClCompile Include="Parser\RDFuncParser.cpp">
+      <Filter>Parser</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Scanner\Scanner.h">
@@ -49,6 +52,9 @@
     </ClInclude>
     <ClInclude Include="default.h">
       <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Parser\RDFuncParser.h">
+      <Filter>Parser</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
